--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main">
         {{>header}}
+        <p>This site was created by Vartika Agrawal. It uses data from mapbox.com and weatherstack.com</p>
         <img class="portrait" src='/img/me.jpeg'>
 
     </div>
