--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         {{>header}}
-        <p>This site was created by Vartika Agrawal. It uses data from mapbox.com and weatherstack.com</p>
+        <p>This site was created by Vartika Agrawal to fetch weather. It uses data from mapbox.com and weatherstack.com</p>
         <img class="portrait" src='/img/me.jpeg'>
 
     </div>
